# Agentic-Invoice-Auditor

./: AI_Invoice_Auditor_Solution.pptx  README.md  env_sample  pyproject.toml
ai_invoice_auditor/: config.py  guardrails.py  llm.py  main.py  mcp_client.py  mcp_server.py  observability.py  streamlit_app.py
ai_invoice_auditor/agents/: business_validator_agent.py  data_validator_agent.py  extractor_agent.py  monitor_agent.py  orchestrator.py  reporter_agent.py  translator_agent.py
ai_invoice_auditor/agents/rag/: augmentation_agent.py  generation_agent.py  indexing_agent.py  rag_orchestrator.py  reflection_agent.py  retrieval_agent.py  vectorstore.py
ai_invoice_auditor/api/: erp_router.py  invoice_router.py  rag_router.py
ai_invoice_auditor/models/: erp.py  invoice.py  rag.py  state.py  validation.py
ai_invoice_auditor/templates/: report.html.j2
ai_invoice_auditor/tools/: business_validator.py  completeness_checker.py  data_harvester.py  invoice_watcher.py  lang_bridge.py
chroma_db/: chroma.sqlite3
config/: rules.yaml
data/: README.md
data/incoming/: INV_DE_004.meta.json  INV_EN_001.meta.json  INV_EN_002.meta.json  INV_EN_005_scan.meta.json  INV_EN_006_malformed.meta.json  INV_ES_003.meta.json
outputs/reports/: FAC-2025-003_report.html  INV-1001_report.html  INV-1002_report.html  INV-L005_report.html  None_report.html  RE-2025-004_report.html  TEST-VER-001_report.html
scripts/: process_all_invoices.py
tests/: test_e2e_all_invoices.py  test_llm_extraction_live.py  test_phase3_orchestration.py  test_phase4_rag_pipeline.py
